k8s/immich/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-route
  namespace: immich
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private-gateway
      namespace: default
      sectionName: immich-https
  hostnames:
    - immich.internal.rayq.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
      - group: ''
        kind: Service
        name: immich-server
        port: 2283
        weight: 1
